Sync all content

--- a/content/resources/10-37s07-th.md
+++ b/content/resources/10-37s07-th.md
@@ -15,4 +15,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 10-37s07-th.jpg
 uid: 900a8f84-9210-9494-3f14-b92f915bdca9
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
