--- a/content/resources/10-37s07.md
+++ b/content/resources/10-37s07.md
@@ -18,4 +18,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 10-37s07.jpg
 uid: bccea16f-cc80-4939-417a-f606da191833
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
