--- a/content/resources/ex1_rev_03212007.md
+++ b/content/resources/ex1_rev_03212007.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: ex1_rev_03212007.pdf
 uid: 974d5df8-3efc-eed7-55dd-e9809c7f5d89
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
