--- a/content/resources/lec01_02072007_g.md
+++ b/content/resources/lec01_02072007_g.md
@@ -14,4 +14,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec01_02072007_g.pdf
 uid: 98d57179-96d5-ae55-c483-1d64c42ec88e
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
