--- a/content/resources/lec02_02092007_g.md
+++ b/content/resources/lec02_02092007_g.md
@@ -13,4 +13,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec02_02092007_g.pdf
 uid: 03959cc9-615b-f18c-be03-b9943238d959
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
