--- a/content/resources/lec03_02142007_w.md
+++ b/content/resources/lec03_02142007_w.md
@@ -13,4 +13,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec03_02142007_w.pdf
 uid: 866a0818-a4bf-6240-8302-98853b9e9985
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
