--- a/content/resources/lec07_02282007_w.md
+++ b/content/resources/lec07_02282007_w.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec07_02282007_w.pdf
 uid: 283b16fd-f984-efdf-4e6f-5ecccffac44a
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
