--- a/content/resources/lec08_03022007_g.md
+++ b/content/resources/lec08_03022007_g.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec08_03022007_g.pdf
 uid: d4c77250-b11a-07b2-8ed5-5f826c83b376
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
