--- a/content/resources/lec10_03092007_w.md
+++ b/content/resources/lec10_03092007_w.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec10_03092007_w.pdf
 uid: c74dac17-84fa-b22d-eb39-830c06a27fec
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
