--- a/content/resources/lec11_03142007_g.md
+++ b/content/resources/lec11_03142007_g.md
@@ -13,4 +13,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec11_03142007_g.pdf
 uid: 6e37d01f-bdf9-6ce9-a42a-085c48bb9a26
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
