--- a/content/resources/lec13_03212007_w.md
+++ b/content/resources/lec13_03212007_w.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec13_03212007_w.pdf
 uid: cacb521f-9f12-3abd-e3b9-a448c5e17d56
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
