--- a/content/resources/lec15_04062007_w.md
+++ b/content/resources/lec15_04062007_w.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec15_04062007_w.pdf
 uid: fae70b80-61cc-b031-2539-50d42f2a789f
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
