--- a/content/resources/lec19_04202007_w.md
+++ b/content/resources/lec19_04202007_w.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec19_04202007_w.pdf
 uid: 85477ce3-0129-fae0-8005-6a95bf5b3cdd
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
