--- a/content/resources/lec20_04272007_w.md
+++ b/content/resources/lec20_04272007_w.md
@@ -13,4 +13,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec20_04272007_w.pdf
 uid: b46164dd-623c-8ad8-c49e-d39983e4b7ed
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
