--- a/content/resources/lec21_05022007_g.md
+++ b/content/resources/lec21_05022007_g.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec21_05022007_g.pdf
 uid: 4fea4f4e-0f38-526c-4fa7-f2d55c602427
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
