--- a/content/resources/lec22_05042007_g.md
+++ b/content/resources/lec22_05042007_g.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec22_05042007_g.pdf
 uid: 2ef1138a-07b7-82ba-17fd-1d41b68c4448
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
