--- a/content/resources/lec25_05162007_g.md
+++ b/content/resources/lec25_05162007_g.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec25_05162007_g.pdf
 uid: cbb3a6f8-7c0b-a55a-d04e-5313d308838f
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
