--- a/content/resources/lec04_02162007_g.md
+++ b/content/resources/lec04_02162007_g.md
@@ -13,4 +13,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec04_02162007_g.pdf
 uid: 1b00a881-d57c-e733-f0aa-17b824e8ac38
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
