--- a/content/resources/lec05_02212007_g.md
+++ b/content/resources/lec05_02212007_g.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec05_02212007_g.pdf
 uid: 9289fe86-a477-8895-a958-4bb4fca5c5c2
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
