--- a/content/resources/lec06_02232007_g.md
+++ b/content/resources/lec06_02232007_g.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec06_02232007_g.pdf
 uid: f1688960-81c1-e947-49ab-5226253b1a22
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
