--- a/content/resources/lec09_03072007_w.md
+++ b/content/resources/lec09_03072007_w.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec09_03072007_w.pdf
 uid: 7f66d10f-e91f-acfe-d4a3-2695695f2996
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
