--- a/content/resources/lec12_03162007_g.md
+++ b/content/resources/lec12_03162007_g.md
@@ -13,4 +13,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec12_03162007_g.pdf
 uid: c6ccb4ac-fbd8-5e86-70f0-98dd0461c48e
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
