--- a/content/resources/lec14_04042007_w.md
+++ b/content/resources/lec14_04042007_w.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec14_04042007_w.pdf
 uid: 5df31e82-3413-2e58-5c7c-d99ecadcb3e2
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
