--- a/content/resources/lec16_04112007_g.md
+++ b/content/resources/lec16_04112007_g.md
@@ -13,4 +13,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec16_04112007_g.pdf
 uid: 51e31c53-576d-849d-4897-76c705307e55
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
