--- a/content/resources/lec17_04132007_g.md
+++ b/content/resources/lec17_04132007_g.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec17_04132007_g.pdf
 uid: 6a615626-763c-2da5-1ddf-683edcafe7cb
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
