--- a/content/resources/lec18_04182007_w.md
+++ b/content/resources/lec18_04182007_w.md
@@ -12,4 +12,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: lec18_04182007_w.pdf
 uid: 6cf645f5-9ed1-ab23-7760-05b93331915a
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
