Sync all content

--- a/content/resources/10-37s07-th.md
+++ b/content/resources/10-37s07-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/900a8f84921094943f14b92f915bdca9_10-37s07-th.jpg
+file: /media/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/900a8f84921094943f14b92f915bdca9_10-37s07-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'In a real mixed tank, there is not perfect mixing due to dead volumes,
@@ -11,6 +11,7 @@ image_metadata:
   credit: ''
   image-alt: A real mixed tank can have bypasses, dead volumes, and recirculation.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 10-37s07-th.jpg
