--- a/content/resources/lec02_02092007_g.md
+++ b/content/resources/lec02_02092007_g.md
@@ -3,13 +3,15 @@ content_type: resource
 description: 'Lecture notes about the reaction rate and reaction mechanisms: Definition
   in terms of reacting compounds and reaction extent; rate laws, Arrhenius equation,
   elementary, reversible, non-elementary, catalytic reactions.'
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/03959cc9615bf18cbe03b9943238d959_lec02_02092007_g.pdf
+file: /media/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/03959cc9615bf18cbe03b9943238d959_lec02_02092007_g.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 856dd290-3098-a93d-b074-f23f2870a240
 resourcetype: Document
 title: lec02_02092007_g.pdf
 uid: 03959cc9-615b-f18c-be03-b9943238d959
@@ -18,3 +20,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+Lecture notes about the reaction rate and reaction mechanisms: Definition in terms of reacting compounds and reaction extent; rate laws, Arrhenius equation, elementary, reversible, non-elementary, catalytic reactions.
