--- a/content/resources/lec05_02212007_g.md
+++ b/content/resources/lec05_02212007_g.md
@@ -2,13 +2,15 @@
 content_type: resource
 description: Lecture notes about continuous stirred tank reactor (CSTR). Reactions
   in a perfectly stirred tank. Steady-state CSTR.
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/9289fe86a4778895a9584bb4fca5c5c2_lec05_02212007_g.pdf
+file: /media/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/9289fe86a4778895a9584bb4fca5c5c2_lec05_02212007_g.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 856dd290-3098-a93d-b074-f23f2870a240
 resourcetype: Document
 title: lec05_02212007_g.pdf
 uid: 9289fe86-a477-8895-a958-4bb4fca5c5c2
@@ -17,3 +19,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+Lecture notes about continuous stirred tank reactor (CSTR). Reactions in a perfectly stirred tank. Steady-state CSTR.
