--- a/content/resources/lec10_03092007_w.md
+++ b/content/resources/lec10_03092007_w.md
@@ -2,13 +2,15 @@
 content_type: resource
 description: Lecture notes about non-ideal reactor mixing patterns. Residence time
   distribution. Tanks in series model. Combinations of ideal reactors.
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/c74dac1784fab22deb39830c06a27fec_lec10_03092007_w.pdf
+file: /media/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/c74dac1784fab22deb39830c06a27fec_lec10_03092007_w.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 856dd290-3098-a93d-b074-f23f2870a240
 resourcetype: Document
 title: lec10_03092007_w.pdf
 uid: c74dac17-84fa-b22d-eb39-830c06a27fec
@@ -17,3 +19,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+Lecture notes about non-ideal reactor mixing patterns. Residence time distribution. Tanks in series model. Combinations of ideal reactors.
