--- a/content/resources/lec12_03162007_g.md
+++ b/content/resources/lec12_03162007_g.md
@@ -3,13 +3,15 @@ content_type: resource
 description: Lecture notes about data collection and analysis. Experimental methods
   for the determination of kinetic parameters of chemical and enzymatic reactions;
   determination of cell growth parameters; statistical analysis and model discrimination.
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/c6ccb4acfbd85e8670f098dd0461c48e_lec12_03162007_g.pdf
+file: /media/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/c6ccb4acfbd85e8670f098dd0461c48e_lec12_03162007_g.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 856dd290-3098-a93d-b074-f23f2870a240
 resourcetype: Document
 title: lec12_03162007_g.pdf
 uid: c6ccb4ac-fbd8-5e86-70f0-98dd0461c48e
@@ -18,3 +20,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+Lecture notes about data collection and analysis. Experimental methods for the determination of kinetic parameters of chemical and enzymatic reactions; determination of cell growth parameters; statistical analysis and model discrimination.
