--- a/content/resources/lec13_03212007_w.md
+++ b/content/resources/lec13_03212007_w.md
@@ -2,13 +2,15 @@
 content_type: resource
 description: Lecture notes about biological reactors - chemostats. Theory of the chemostat.
   Fed batch or semi-continuous fermentor operation.
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/cacb521f9f123abde3b9a448c5e17d56_lec13_03212007_w.pdf
+file: /media/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/cacb521f9f123abde3b9a448c5e17d56_lec13_03212007_w.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 856dd290-3098-a93d-b074-f23f2870a240
 resourcetype: Document
 title: lec13_03212007_w.pdf
 uid: cacb521f-9f12-3abd-e3b9-a448c5e17d56
@@ -17,3 +19,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+Lecture notes about biological reactors - chemostats. Theory of the chemostat. Fed batch or semi-continuous fermentor operation.
