--- a/content/resources/lec19_04202007_w.md
+++ b/content/resources/lec19_04202007_w.md
@@ -2,13 +2,15 @@
 content_type: resource
 description: Lecture notes about oxygen transfer in fermentors. Applications of gas-liquid
   transport with reaction.
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/85477ce30129fae080056a95bf5b3cdd_lec19_04202007_w.pdf
+file: /media/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/85477ce30129fae080056a95bf5b3cdd_lec19_04202007_w.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 856dd290-3098-a93d-b074-f23f2870a240
 resourcetype: Document
 title: lec19_04202007_w.pdf
 uid: 85477ce3-0129-fae0-8005-6a95bf5b3cdd
@@ -17,3 +19,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+Lecture notes about oxygen transfer in fermentors. Applications of gas-liquid transport with reaction.
