--- a/content/resources/lec25_05162007_g.md
+++ b/content/resources/lec25_05162007_g.md
@@ -1,13 +1,15 @@
 ---
 content_type: resource
 description: Lecture notes reviewing the course.
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/cbb3a6f87c0ba55ad04e5313d308838f_lec25_05162007_g.pdf
+file: /media/courses/10-37-chemical-and-biological-reaction-engineering-spring-2007/cbb3a6f87c0ba55ad04e5313d308838f_lec25_05162007_g.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 856dd290-3098-a93d-b074-f23f2870a240
 resourcetype: Document
 title: lec25_05162007_g.pdf
 uid: cbb3a6f8-7c0b-a55a-d04e-5313d308838f
@@ -16,3 +18,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+Lecture notes reviewing the course.
